# gm

./: README.md  meson.build  recipe.json
data/: al.getcryst.FirstSetup.appdata.xml.in  al.getcryst.FirstSetup.desktop.in  al.getcryst.FirstSetup.gschema.xml  meson.build
data/icons/: meson.build
vanilla_first_setup/: dialog.py  main.py  meson.build  vanilla-first-setup.gresource.xml  window.py
vanilla_first_setup/defaults/: theme.py  welcome.py
vanilla_first_setup/layouts/: preferences.py  yes_no.py
vanilla_first_setup/scripts/: install-flathub-beta.sh  install-flathub.sh  install-microcode.sh  install-nix.sh  install-nvidia.sh  meson.build
vanilla_first_setup/utils/: builder.py  parser.py  processor.py  run_async.py
vanilla_first_setup/views/: done.py  progress.py  tour.py
